refactor/ make pagination middle ware and search query 'q'
