# src/config/swagger/course.yaml
@@ -89,15 +89,32 @@ components:
           name: limit
           type: integer
           required: true
+        - in: query
+          name: q
+          type: string
+          required: false
+          description: This parameter is used to search using course name or course code
     responses:
         200: 
             description: valid request
             content:
                 application/json:
                     schema:
-                        type: array
-                        items:
-                            $ref: '#components/schemas/course'
+                        type: object
+                        properties:
+                            pagination:
+                                types: object
+                                properties:
+                                    pagenNo: 
+                                        type: number
+                                    limit:
+                                        type: number
+                                    totalNumber:
+                                        type: number
+                            results:
+                                type: array
+                                items:
+                                    $ref: '#components/schemas/course'
   post:
     tags: 
         - Courses
