# src/router/course.ts
@@ -2,13 +2,14 @@ import express from 'express'
 import CourseHandler from '../handler/course';
 import wrapAsync from '../helper/wrapAsync';
 import { isAuthenticated } from '../service/student'
+import pagination from '../service/pagination';
 const router: express.Router = express.Router();
 
 
 
 
 // [GET] /courses?pageNo=1&limit=15
-router.get("/", wrapAsync(CourseHandler.index));
+router.get("/", wrapAsync(pagination), wrapAsync(CourseHandler.index));
 
 // [GET] /courses/:course_code
 router.get("/:course_code", wrapAsync(CourseHandler.show));
